--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Lab 9</title>
 
   <script src="index.js" type="module"></script>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <style>
     button {
